# discord-ext-subcommands

./: README.md  pyproject.toml
discord/ext/subcommands/: __init__.py  core.py
examples/: bot.py
examples/extensions/: hybrid.py  prefix.py  slash.py
